<resources>
    <string name="app_name">Antidote Mobile Home</string>
    <string name="infopage_name">Antidote Info</string>
    <string name="info">Info</string>
    <string name="create_game_button">Create Game</string>
    <string name="join_game_button">Join Game</string>
    <string name="game_code_placeholder">ENTER GAME CODE</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="signup_message">Don\'t have an account yet? Sign up here.</string>
    <string name="continue_as_guest">Continue as guest</string>
    <string name="login_title">Login</string>
    <string name="InfoButtonDesc">Take the user to the info page</string>
    <string name="BackButtonDesc">Returns the user to the previous page</string>
    <string name="game_instructions">Game Instructions</string>
    <string name="infopage_toc_objective">- Objective</string>
    <string name="infopage_toc_gameplay">- Gameplay</string>
    <string name="infopage_toc_scoring">- Scoring</string>
    <string name="infopage_headers_setup">Game Setup</string>
    <string name="infopage_headers_objective">Objective</string>
    <string name="infopage_headers_gameplay">Gameplay</string>
    <string name="info_setup_step1">1. Toxin cards are shuffled, and one is removed and set aside. The toxin that is set aside is the one for which players will try to find the antidote.</string>
    <string name="info_setup_step2">2. Remaining toxin cards are shuffled with syringe cards (See Table 01). Two cards (Three in 3-Player games) are dealt to each player.</string>
    <string name="info_setup_step3">3. Antidote cards are selected (see Table 01 for counts), shuffled, and evenly dealt to each player. For example, in a 4-Player game, all cards with a 1, 2, 3, or 4 are selected for each formula, shuffled, and evenly dealt.</string>
    <string name="info_setup_step4">4. Once cards have been dealt, players may view and reorganize their hands. All players will have the same number of cards in hand, at all times.</string>
    <string name="info_objective_text">Cards will be discarded over the course of the game. Your goal is for your last remaining card to be an antidote to the hidden Toxin.</string>
    <string name="info_table01_contentDesc">Table denoting card distribution at start of game</string>
    <string name="infopage_toc_setup">- Setup</string>
    <string name="infopage_gameplay_text1">At the start of the game, a random player will be selected to go first. Play will continue clockwise from this starting player. On your turn, you must take one of 3 actions:</string>
    <string name="infopage_gameplay_text2">\t 1: Discard a Card</string>
    <string name="infopage_gameplay_text3">\t 2: Trade Cards</string>
    <string name="infopage_gameplay_text4">\t 3: Play a Syringe Card</string>
    <string name="infopage_gameplay_text5">Each player must take exactly one action, after which their turn is over.</string>
    <string name="infopage_gameplay_text6">Every player will choose a card, and simultaneously discard it to their workstation (the area directly in front of them). Toxin cards (Those marked with an “X”) will be face-down, all other cards will be face-up. Cards on a player\'s workstation are visible to all players.</string>
    <string name="infopage_gameplay_text7">There are two ways to trade cards:</string>
    <string name="infopage_gameplay_text8">\t A) All players pass a card face-down to the left or right, OR</string>
    <string name="infopage_gameplay_text9">\t B) Make a one-card trade with a player of your choice.</string>
    <string name="infopage_gameplay_text10">A) First, select either left or right. All players will select a single card from their hands and simultaneously pass it face-down in the direction you chose. Then, players add the received cards to their hand.</string>
    <string name="infopage_gameplay_text11">B) Choose a player to trade with. Discuss terms of the trade, and simultaneously complete the trade face-down, adding the received card to your hand. You may only trade one card. The player can refuse a trade. You must honor the agreement. For example, you can both agree to trade a Toxin card, but you must both actually trade Toxin cards. If no player agrees to trade with you, select a different action.</string>
    <string name="infopage_gameplay_text12">Note: You can only choose this action if you have a Syringe card in your hand.</string>
    <string name="infopage_gameplay_text13">Reveal a Syringe card from your hand to “steal“ a card from any player\'s hand or workstation. If you choose to steal a card from a player\'s hand, it is selected randomly and given to you, and they are given the Syringe. If you choose to steal a card from a player\'s workstation, you place the stolen card in your hand and place the syringe on their workstation. You may steal face-down or face-up cards from a player\'s workstation. You may steal from your own workstation.</string>
    <string name="infopage_subheader_1">1: Discard a Card</string>
    <string name="infopage_subheader_2">2: Trade Cards</string>
    <string name="infopage_subheader_3">3: Play a Syringe Card</string>
    <string name="infopage_header_scoring">Scoring</string>
    <string name="infopage_scoring_text1">Eventually, all the players will only have one card left. When this occurs, players reveal their last card. Then, the hidden Toxin, selected at the start of the game, will be shown.</string>
    <string name="infopage_scoring_text2">A) If you drink the antidote (i.e. the hidden Toxin matches your last card), you live! You gain points equal to the number on your last card. (See Table 02: Scoring Examples - Example 1)</string>
    <string name="infopage_scoring_text3">B) If you do not drink the antidote (i.e. the hidden Toxin does NOT match your last card), you die. You lose points equal to the number on your last card (See Table 02: Scoring Examples - Example 2)</string>
    <string name="infopage_scoring_text4">C) If your last card is not an antidote card (e.g. if it is a Syringe), you die and receive -1 point.</string>
    <string name="infotable_scoring_table_contentdesc">Table showing various cases of scoring</string>
    <string name="infotable_scoring_subheader1">Dying to play again?</string>
    <string name="infopage_scoring_text5">Even if you die, you can play again! The winner of a game of antidote is the player with the most points after 3 rounds.</string>
    <string name="activity_main_username">Username:</string>
    <string name="activity_main_password">Password:</string>
    <string name="activity_main_login">Login</string>
    <string name="login_signinmessage">Please sign in to your account</string>
    <string name="login_failed">Login failed.</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="player_label">Players</string>
    <string name="hey_there">Hey there</string>
    <string name="game_code">Game Code:</string>
    <string name="default_profile_title">Profile</string>
    <string name="default_games_played">Games Played</string>
    <string name="default_games_won">Games Won</string>
    <string name="default_games_lost">Games Lost</string>
    <string name="default_win_rate">Win Rate</string>
    <string name="player_1">Player 1</string>
    <string name="player_2">Player 2</string>
    <string name="player_3">Player 3</string>
    <string name="player_4">Player 4</string>
    <string name="player_5">Player 5</string>
    <string name="player_6">Player 6</string>
    <string name="player_7">Player 7</string>
    <string name="turn">Turn:</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="have_an_account_log_in_here">Have an account? Log In here.</string>
    <string name="email">Email</string>
    <string name="leave_game">Leave Game</string>
    <string name="refresh">Refresh</string>
    <string name="end_game">End Game</string>
    <string name="start_game">Start Game</string>
    <string name="room_code">ROOM CODE</string>
    <string name="kick">Kick</string>
    <string name="turn_">Turn:</string>
    <string name="filler_text">Filler text</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="create_player_error">Could not create new player</string>
    <string name="enter_lobby_error">Could not enter the lobby</string>
    <string name="could_not_connect">There was an issue connecting to the server.</string>
    <string name="you_were_kicked">You were kicked out of the game.</string>
    <string name="sorry">Sorry! :(</string>
    <string name="check_your_internet">Please check your connection and try again.</string>
    <string name="check_other_games_and_internet">
        Please check that you are not in another game and that your connection is stable and try again.
    </string>
    <string name="check_game_code_and_internet">
        Please check that the game code is correct and that your connection is stable and try again.
    </string>
    <string name="username_too_long">Your username is too long</string>
    <string name="think_again">Back to brainstorming!</string>
    <string name="game_in_progress">Game is already in progress.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="confirm_leave_rejoin">
        Do you want to join this new game or rejoin your game?
    </string>
    <string name="lose_progress_warning">
        WARNING: If you leave your current game, you will lose all progress.
    </string>
    <string name="rejoin">Rejoin</string>
    <string name="leave">Leave</string>
    <string name="player123456_s_workstation">Player123456\'s Workstation</string>
    <string name="try_again">Try Again</string>
    <string name="missing_field_info">Some required fields are missing</string>
    <string name="fill_out_and_try_again">Fill out all fields and try again.</string>
    <string name="passwords_dont_match">Passwords do not match</string>
    <string name="type_carefully">Type carefully!</string>
    <string name="DiscardButtonDesc">Make everyone discard a card</string>
    <string name="status_title">Status</string>
    <string name="default_status">I\'m a pro Antidote Mobile gamer!</string>
    <string name="edit_status_button">Edit</string>
    <string name="save_status_button">Save</string>
    <string name="statistics">Statistics</string>
    <string name="send_a_chat_to_your_game">Send a chat to your game</string>
    <string name="send">Send</string>
    <string name="profile_other">Other profile pic</string>
    <string name="profile_me">My profile</string>
    <string name="your_outgoing_message_here">Your outgoing message here</string>
    <string name="chat_button">Chat Button</string>
    <string name="cannot_create_when_in_another_game">You cannot create a game when you are already in one!</string>
    <string name="leave_other_game_first">Leave you other game first.</string>
    <string name="browse_games">Browse Games</string>
    <string name="join">Join</string>
    <string name="private_">Private</string>
    <string name="public_">Public</string>
    <string name="player_2_s_confirm_indicator">Player 2\'s confirm indicator</string>
    <string name="player_3_s_confirm_indicator">Player 3\'s confirm indicator</string>
    <string name="player_4_s_confirm_indicator">Player 4\'s confirm indicator</string>
    <string name="player_1_s_confirm_indicator">Player 1\'s confirm indicator</string>
    <string name="header_textview">Header textview</string>
    <string name="example">Example</string>
    <string name="www_exampleemail_com">www.ExampleEmail.com</string>
    <string name="add_ai">Add AI</string>
</resources>