<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:background="#808080"
    android:gravity="bottom"
    android:orientation="vertical"
    android:padding="20dp">

    <ImageView
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:contentDescription="@string/header_textview"
        android:src="@drawable/example_icon" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/example"
        android:textSize="24sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/www_exampleemail_com"
        android:textSize="14sp" />

</LinearLayout>
