<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/roomCodeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/room_code"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/playerLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:text="@string/player_label"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/roomCodeTextView"
        tools:layout_conversion_absoluteHeight="19dp"
        tools:layout_conversion_absoluteWidth="409dp"
        tools:layout_editor_absoluteX="2dp" />

    <Button
        android:id="@+id/startGameButton"
        android:layout_width="142dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:onClick="startGame"
        android:text="@string/start_game"
        app:layout_constraintBottom_toTopOf="@id/playerLabel"
        app:layout_constraintEnd_toStartOf="@id/endGameButton"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lobbyPrivateButton" />

    <Button
        android:id="@+id/endGameButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:onClick="endGame"
        android:text="@string/end_game"
        app:layout_constraintBottom_toTopOf="@id/playerLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/startGameButton"
        app:layout_constraintTop_toBottomOf="@id/lobbyPrivateButton" />

    <Button
        android:id="@+id/leaveGameButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:onClick="leaveGame"
        android:text="@string/leave_game"
        app:layout_constraintBottom_toTopOf="@+id/playerLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lobbyPrivateButton" />

    <Button
        android:id="@+id/lobbyPrivateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="privateButton"
        android:text="@string/private_"
        app:layout_constraintEnd_toStartOf="@+id/lobbyAIButton"
        app:layout_constraintStart_toStartOf="@+id/roomCodeTextView"
        app:layout_constraintTop_toBottomOf="@id/roomCodeTextView" />

    <Button
        android:id="@+id/lobbyAIButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="AIButton"
        android:text="@string/add_ai"
        app:layout_constraintEnd_toEndOf="@+id/roomCodeTextView"
        app:layout_constraintStart_toEndOf="@+id/lobbyPrivateButton"
        app:layout_constraintTop_toBottomOf="@id/roomCodeTextView" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/playerList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/playerLabel" />

    <ImageButton
        android:id="@+id/chatButtonLobby"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/chat_button"
        android:onClick="onClickChat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_chat_bubble_24" />

    <TextView
        android:id="@+id/publicTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/private_"
        app:layout_constraintEnd_toEndOf="@+id/roomCodeTextView"
        app:layout_constraintStart_toStartOf="@+id/roomCodeTextView"
        app:layout_constraintTop_toBottomOf="@id/roomCodeTextView"
        app:layout_constraintBottom_toTopOf="@id/leaveGameButton" />

</androidx.constraintlayout.widget.ConstraintLayout>